packages/parser/test/tokenizer/E0006.txt
"test \w
===== err =====
/test/tokenizer/E0006.txt:1:7: SyntaxError: E0006 - Illegal string escape sequence
1 | "test \w
  |       ^
